assets/css/style.css
/* ... */
.secondary-btn:hover::after{
    left: 0;
}

.secondary-btn:hover{
    color: var(--white);
}

.secondary-btn:hover span i{
    animation: arrow-animation .4s ease-in-out 1;
}

@keyframes arrow-animation{
    0%{
        transform: rotate(-23deg) scale(0.1);
    }
    100%{
        transform: rotate(-23deg) scale(1.1);
    }
}


/* ------ Section Caption----- */

.caption{
    position: relative;
    display: inline-block;
    color: var(--primary-color);
    font-size: 14px;
    font-weight: var(--regular);
    font-family: var(--primary-font);
    text-transform: capitalize;
    color: var(--text-color);
    margin-left: 20px;
}

.caption::before{
    content: '';
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    left: -15px;
    width: 7px;
    height: 7px;
    border-radius: 5px;
    background-color: var(--primary-color);
}


/* --- Transparent Bg --- */

.transparent-bg{
    background: rgba(19, 18, 18, 0.1);
    backdrop-filter: blur(15px) saturate(160%);
    -webkit-backdrop-filter: blur(15px) saturate(9%);
}






/*--------------------- Header Area Start------------------ */

.header-area{
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: auto;
    z-index: 99;
    padding: 40px 15px;
}

.header-area .container{
    max-width: 1740px;
    width: 100%;
}

.site-logo{
    display: inline-block;
    width: 160px;
    height: 45px;
}

.site-logo img{
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.header-right{
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.nav-menu{
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    align-items: center;
    gap: 40px;
}

.nav-menu li {
    position: relative;
}

.nav-menu li a{
    display: inline-block;
    height: 22px;
    overflow:hidden;
    position:relative;
    color: var(--white);
    font-size: 16px;
    font-family: var(--primary-font);
    font-weight: var(--medium);
    text-decoration: none;
    text-transform: capitalize;
}

.nav-menu li a .label-up {
    display:block;
    height:100%;
    position:relative;
    top:0%;
    transition:0.3s;
}
  
.nav-menu li a:hover .label-up {
    top:-100%;
}


/* --- Dropdown Menu Start--- */


.dropdown-content {
    padding: 30px;
    margin: 0;
    list-style: none;
    position: absolute;
    top: 70px; 
    left: 0;
    z-index: 10; 
    width: 325px;
    height: auto;
    display: flex;
    flex-direction: column;
    gap: 10px;
    background-color: var(--white);
    border-radius: 20px;
    opacity: 0;
    visibility: hidden;
    transition: var(--transition);
}

.nav-menu li:hover .dropdown-content {
    opacity: 1;
    visibility: visible; 
    transform: translateY(-20px);
}


.dropdown-content li{
    position: relative;
    display: inline-block;
    overflow: hidden;
}

.dropdown-content li::before{
    content: '';
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 1px;
    background-color: var(--border-color);
}

.dropdown-content li::after{
    content: '';
    position: absolute;
    left: -100%;
    bottom: 0;
    width: 100%;
    height: 1px;
    background-color: var(--secondary-color);
    transition: var(--transition);
}

.dropdown-content li:hover::after{
    left: 0;
}

.dropdown-content li a{
    position: relative;
    display: inline-flex;
    align-items: center;
    font-size: 16px;
    color: var(--text-color);
    margin-bottom: 12px;
    transition: var(--transition);
}

.dropdown-content li a:hover{
    color: var(--secondary-color);
    margin-left: 20px;
}

.dropdown-content li a::after{
    content: '';
    position: absolute;
    left: -20px;
    top: 50%;
    transform: translateY(-50%);
    width: 7px;
    height: 7px;
    background-color: var(--primary-color);
    opacity: 0;
    visibility: hidden;
    transition: var(--transition);
}

.dropdown-content li a:hover::after{
    opacity: 1;
    visibility: visible;
}


/* --- Dropdown Menu End--- */


.cta-inner{
    display: flex;
    align-items: center;
    gap: 20px;
}

.call-btn{
    display: inline-flex;
    align-items: center;
    gap: 10px;
    font-size: 15px;
    color: var(--white);
    text-decoration: none;
    text-transform: capitalize;
    padding: 8px 20px 8px 8px;
    border-radius: 50px;
    transition: var(--transition);
}

.call-icon{
    width: 40px;
    height: 40px;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);
    border-radius: 50%;
}

.call-icon svg{
    width: 20px;
    height: 20px;
}

.call-btn span{
    font-weight: bold;
}

.call-btn:hover{
    color: var(--primary-color);
}

.trigger-btn{
    width: 45px;
    height: 45px;
    display: none;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);
    color: var(--black);
    font-size: 16px;
    border-radius: 6px;
    border: none;
}

/*--------------------- Header Area End------------------ */















/*--------------------- Hero Area Start------------------ */

.hero-area{
    position: relative;
    padding: 285px 15px 110px;
    background-image: url(../image/hero-banner.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-color: #00000085;
    background-blend-mode: multiply;
}

.hero-area .container{
    max-width: 1740px;
    width: 100%;
}

.hero-area__content .caption{
    color: var(--white);
}

.video-area{
    display: flex;
    align-items: center;
    gap: 40px;
    margin-top: 50px;
}

.video-inner{
    max-width: 300px;
    width: 100%;
    height: auto;
    display: flex;
    align-items: center;
    justify-content: end;
    padding: 7px;
    border-radius: 50px;
    background-image: url(../image/video-image.jpg);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
/* ... */

